added tests files for Packer, FileService and ParseService