@@ -64,6 +64,16 @@
       <version>1.6.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>javax.el</artifactId>
+      <version>2.2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -81,8 +91,14 @@
         <version>3.0.0-M5</version>
         <configuration>
           <argLine>
-            --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
-            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.time=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.naming/javax.naming=ALL-UNNAMED
+            --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
